--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Currencio</string>
     <string name="btn_convert">Convert</string>
-    <string name="title_activity_second">SecondActivity</string>
+    <string name="title_activity_second">Currencio</string>
 </resources>
